--- a/products/plist.html
+++ b/products/plist.html
@@ -47,58 +47,58 @@
         </tr>
         <tr>
             <td rowspan="5" style="vertical-align:top;"><strong>Props</strong></td>
-            <td class="middle">20" Deranged cat</td>
+            <td class="middle"><a class="product" href="/products/cat.html">20" Deranged cat</a></td>
             <td class="right">$39.99</td>
         </tr>
         <tr>
-            <td class="middle">Flying bats</td>
+            <td class="middle"><a class="product" href="#">Flying bats</a></td>
             <td class="right">$14.99</td>
         </tr>
         <tr>
-            <td class="middle">16" Ugly rat</td>
+            <td class="middle"><a class="product" href="#">16" Ugly rat</a></td>
             <td class="right">$14.99</td>
         </tr>
         <tr>
-            <td class="middle">20" Uglier rat</td>
+            <td class="middle"><a class="product" href="#">20" Uglier rat</a></td>
             <td class="right">$19.99</td>
         </tr>
         <tr>
-            <td class="middle">Plastic skeleton</td>
+            <td class="middle"><a class="product" href="#">Plastic skeleton</a></td>
             <td class="right">$12.50</td>
         </tr>
         <tr>
             <td rowspan="3" style="vertical-align:top;"><strong>Costumes</strong></td>
-            <td class="middle">Austin Powers</td>
+            <td class="middle"><a class="product" href="#">Austin Powers</a></td>
             <td class="right">$79.99</td>
         </tr>
         <tr>
-            <td class="middle">Frankstein</td>
+            <td class="middle"><a class="product" href="#">Frankstein</a></td>
             <td class="right">$49.99</td>
         </tr>
         <tr>
-            <td class="middle">Martian</td>
+            <td class="middle"><a class="product" href="#">Martian</a></td>
             <td class="right">$69.99</td>
         </tr>
         <tr>
             <td rowspan="3" style="vertical-align:top;"><strong>Special Effects</strong></td>
-            <td class="middle">Fog machine</td>
+            <td class="middle"><a class="product" href="#">Fog machine</a></td>
             <td class="right">$9.99</td>
         </tr>
         <tr>
-            <td class="middle">Fog juice</td>
+            <td class="middle"><a class="product" href="#">Fog juice</a></td>
             <td class="right">$34.99</td>
         </tr>
         <tr>
-            <td class="middle">Mini strobe light</td>
+            <td class="middle"><a class="product" href="#">Mini strobe light</a></td>
             <td class="right">$14.99</td>
         </tr>
         <tr>
             <td rowspan="2" style="vertical-align:top;"><strong>Masks</strong></td>
-            <td class="middle">Freddy</td>
+            <td class="middle"><a class="product" href="#">Freddy</a></td>
             <td class="right">$44.50</td>
         </tr>
         <tr>
-            <td class="middle">Darth Vader</td>
+            <td class="middle"><a class="product" href="#">Darth Vader</a></td>
             <td class="right">$124.50</td>
         </tr>
         
