--- a/navbar/teaching_app.html
+++ b/navbar/teaching_app.html
@@ -53,7 +53,7 @@
 
 
 
-        <h2>Thank you for taking our survey!</h2>
+        <h2>Thank you for your Application!</h2>
         <input type="submit" name="button" id="button" value="Submit">
         <input type="reset" name="reset" id="reset"> 
     </form>
