--- a/navbar/teaching_app.html
+++ b/navbar/teaching_app.html
@@ -47,9 +47,9 @@
         <input type="date" name="Submission Date" id="sdate" placeholder="XX/XX/XXXX"><br><br>
 
         <label for="male">Male:</label>
-        <input type="checkbox" name="Male" value="male"><br><br>
+        <input type="checkbox" name="Gender: Male" value="male"><br><br>
         <label for="fbook">Female:</label>
-        <input type="checkbox" name="Female" value="female"><br><br>
+        <input type="checkbox" name="Gender: Female" value="female"><br><br>
 
 
 
