inzy weenzy tweak

--- a/navbar/about.html
+++ b/navbar/about.html
@@ -32,7 +32,7 @@
     <h1>About Us</h1>
     
     <img src="/images/david.jpg" alt="David" style="width:6.8em; height: 10em; float:left;">
-            <p style="padding-right:29em;"><strong>David Song</strong> Head Designer Exec. Producer Chillest Dude Office: N/A </p><p>Email: dsong@aum.edu </p><br>
+            <p style="padding-right:29em; margin-bottom: 0em;"><strong>David Song</strong> Head Designer Exec. Producer Chillest Dude Office: N/A </p><p style="margin-top:0em;">Email: dsong@aum.edu </p><br><br>
     <img src="/images/bailey.jpg" alt="Best_Dog" style="width:6.8em; height:10em; float:left;">
             <p style="padding-right:29em;"><strong>Bailey Song</strong> Moral Support Best Dog</p>
     <br><br><br><br><br><br><br><br><br>
